feat: finalize email template manager implementation (Markdown rendering, layout injection, ...)

--- a/emails/src/components/button.html
+++ b/emails/src/components/button.html
@@ -14,7 +14,8 @@
   <a
     attributes
     href="{{ href }}"
-    class="inline-block py-5 px-7 text-md leading-none font-semibold rounded text-slate-50 bg-primary hover:bg-primary-hover [text-decoration:none]"
+    target="_blank"
+    class="inline-block py-5 px-7 text-md leading-none font-semibold rounded text-slate-50 cursor-pointer bg-primary hover:bg-primary-hover [text-decoration:none]"
   >
     <outlook>
       <i class="tracking-3 mso-font-width-[-100%] mso-text-raise-1.5" hidden>&nbsp;</i>
